Update Критична маса – Част 1: Малката църква.md

--- a/Критична маса – Част 1: Малката църква.md
+++ b/Критична маса – Част 1: Малката църква.md
@@ -1,8 +1,8 @@
 # Критична маса – Част 1: Малката църква
 
-|Автор |преводач |редактор |
+|Автор |Преводач |Редактор |
 |-|-|-|
-|Автор: Гари Норт|Превод: Еми Мирославова|Редактор: Райчо Николов|
+|Гари Норт|Еми Мирославова|Райчо Николов|
 
 
 Наскоро пътувах от Тейлър, Тексас, до Хюстън и обратно (статията е писана 1991 г. – бел. ред.). Пътуването траеше четири часа и половина в едната посока и минах през няколко малки града, чието население е от 2-3 хиляди до тридесет хиляди души. Другият път е около три часа и половина. По него рядко срещаш някой град. Първият маршрут е по-интересен. Минавайки по него виждаш, че някои от градовете са сравнително добре развити, докато други изглеждат западащи.
@@ -17,7 +17,7 @@
 
 Хората увеличават способността да служат един на друг и увеличават богатството си благодарение на това че се специализират в определена област. Увеличаването разнообразието на услуги е основата на съвременния капитализъм. То е основа за развитието и на успешна църква. Служенето е целта на всяка икономическа организация. Същото се отнася и за църковните организации. Една голяма и растяща градска среда позволява на хората, които искат да си сътрудничат, да намерят по-евтин и печеливш начин за откриването на купувачи за техните услуги.
 
-#### Проблемът „Малка Църква“
+## Проблемът „Малка Църква“
 
 На 20 март 1991 г. Уол Стрийт Джърнал публикува статия за една религиозна организация, действаща в Тексас и Тенеси. Аз познавах създателя ѝ. (Организацията не е църква). Въпреки, че не проповядват божествената същност на Христос, те считат себе си за християни. Освен това проповядват по Талмуда, че хора, които нямат еврейски произход са под определен набор от закони. Тези закони не са библейските закони, които се изисква евреите да спазват, но въпреки това те трябва да се спазват. Техният основател е специалист по Талмуда и други еврейски източници на религиозни традиции.
 
@@ -29,7 +29,7 @@
 
 Повечето университети са светски, а работни места, които са организирани около някакви религиозни принципи са малко. Това означава, че на практика не е възможно една религиозна организация да расте само на основата на посветеността на тези, които вече са в тази организация. Тя трябва да набира хора.
 
-#### Решения, които рядко вършат работа
+## Решения, които рядко вършат работа
 
 Малките общества и деноминации са измислили няколко решения на проблема. Малко от тях обаче работят добре. Един от вариантите е летен семеен лагер, на който младите хора от региона или от деноминацията участват. Друг начин е създаването на колеж, стига религиозната организация да е достатъчно голяма. В колежа ще се наемат хора от деноминацията. Съществуват и други периодични срещи като съживителни кампании, пеене на химни и други подобни социални събрания.
 
@@ -41,7 +41,7 @@
 
 Ето защо е от изключителна важност едно църковно служение да подпомага несемейните за де женят. Ако това не може да бъде постигнато чрез набирането на нови семейства в паството, то може да се набират несемейни хора от други деноминации или извън църквата. Ако семействата вътре в църквата нямат деца на възраст за женене, то следва систематично да се набират синове или дъщери от други религии или деноминации. Това е доста труден проект и рядко малки църкви са успявали в изпълнението му. Те не могат да предложат на младите програми, каквито предлагат големите и богати общества. Големите църкви са тези, които откъсват младите от по-малките. Това е ефекта на „критичната маса“. Този феномен действа в местните общности така, както действа в малките градове на Тексас. Те губят младите хора в полза на еквивалентните деноминации в Далас, Хюстън, Остин, Сан Антонио или някй друг голям град. Това се случва навсякъде, не само в Съединените щати. Увеличаващата се критична маса в големите градове продължава да привлича хората, докато намаляващата маса в малките градове продължава да кара хората да се изнасят.
 
-#### Проблемът на Християнската реконструкция
+## Проблемът на Християнската реконструкция
 
 Тези изводи се отнасат за всяко ново движение. Християнската Реконструкция е такова движение. Първоначално то е обхващало хора от малки деноминации, по-конкретно Калвинистки или харизматични общности, които са извън основните Педесятни движения. Реконструкционистите срещат трудности сред приятелите си в църквите, тъй като има известна враждебност по отделни позиции на Християнската реконструкция. Те биват изолирани от паствата си, дори може да се стигне до открит конфликт с членовете на деноминацията или местното паство. В един момент на тях им писва да спорят. Появява се тенденция тези, които са приели Реконструкционистките идеи да търсят други хора със сходни възгледи, които биха искали да създадат църква. Проблемът обаче е, че реконструкционистките идеи не привличат много голям брой хора. Това прави по-трудно намирането на други от общността които споделят тези възгледи, а недостатъчният брой хора прави трудно назначаването на пастор на пълно работно време. Дори и да успеят да наемат пастор, малко вероятно е да успеят в набирането на голям брой хора в новата деноминация. И така, освен че ще страдат от репутациата че са някакъв култ, ще страдат и от другите проблеми, които среща всяка малка организация която не е достигнала голяма _критична маса_.
 
