Update Личното предназначение и Божието царство: Камъкът стана Планина.md

--- a/Личното предназначение и Божието царство: Камъкът стана Планина.md
+++ b/Личното предназначение и Божието царство: Камъкът стана Планина.md
@@ -1,6 +1,6 @@
 # Личното предназначение и Божието царство: „Камъкът стана Планина“
 
-За да говорим за [личното предназначение и Божието царство](Личното предназначение и Божието царство: Въведение.md) трябва първо да разберем _самата същност на Божието царство_ – така както е разкрита в Старозаветните пророчества и в притчите на Новия завет.
+За да говорим за [личното предназначение и Божието царство](Личното%20предназначение%20и%20Божието%20царство:%20Въведение.md) трябва първо да разберем _самата същност на Божието царство_ – така както е разкрита в Старозаветните пророчества и в притчите на Новия завет.
 
 Противно на вярванията на повечето модерни посетители на църквата, личното спасение _не е_ крайната цел в Новия завет и не е главното послание на Благовестието. Личното спасение _е само средство_ за Благовестието.
 
