Update Личното предназначение и Божието царство: Камъкът стана Планина.md

--- a/Личното предназначение и Божието царство: Камъкът стана Планина.md
+++ b/Личното предназначение и Божието царство: Камъкът стана Планина.md
@@ -1,5 +1,9 @@
 # Личното предназначение и Божието царство: „Камъкът стана Планина“
 
+|автор | преводач| редактор|
+|-|-|-|
+|Божидар Маринов| Цветемира Николова | Райчо Николов|
+
 За да говорим за [личното предназначение и Божието царство](./Личното%20предназначение%20и%20Божието%20царство:%20Въведение.md) трябва първо да разберем _самата същност на Божието царство_ – така както е разкрита в Старозаветните пророчества и в притчите на Новия завет.
 
 Противно на вярванията на повечето модерни посетители на църквата, личното спасение _не е_ крайната цел в Новия завет и не е главното послание на Благовестието. Личното спасение _е само средство_ за Благовестието.
@@ -71,5 +75,3 @@ _Картината е ясна. В този свят, в историята, Б
 **Божието царство напредва чрез една завоевателна армия която печели общество, култура и народи за своя Цар.**
 
 _(следва)_
-
-</div>
