Update Личното предназначение и Божието царство: Камъкът стана Планина.md

--- a/Личното предназначение и Божието царство: Камъкът стана Планина.md
+++ b/Личното предназначение и Божието царство: Камъкът стана Планина.md
@@ -12,9 +12,9 @@
 
 > 24 Тогава ще бъде краят, когато Той предаде царството на Бога и Отца, когато унищожи всяко началство и всяка власт, и сила, 25 защото Той трябва да царува, докато положи всички врагове под краката Си. 26 Последният враг, който ще бъде унищожен, е смъртта. 27 Защото Бог „е покорил всичко под краката Му“. Но когато казва, че всичко е покорено, ясно е, че се изключва Този, който Му е покорил всичко.  
 > 28 А когато всичко Му бъде покорено, тогава и Самият Син ще се покори на Този, който Му е покорил всичко, за да бъде Бог всичко във всичко.  
-> _~ 1 Коринтяни 15:24-28_
+> ~ 1 Коринтяни 15:24-28
 
-В 1 Коринтяни 15 Павел ни дава описание на Благовестието и след това казва, че „всички неща ще бъдат покорени“ на Исус, така че накрая „Бог да бъде всичко във всичко“. „Всичко да бъде покорено на Исус“ е това, което Библията нарича „_Божие царство“_ или „_Небесното царство“_.
+В 1 Коринтяни 15 Павел ни дава описание на Благовестието и след това казва, че „всички неща ще бъдат покорени“ на Исус, така че накрая „Бог да бъде всичко във всичко“. „Всичко да бъде покорено на Исус“ е това, което Библията нарича „_Божие царство“_ или _„Небесното царство“_.
 
 Именно това Царство е целта и предназначението на Благовестието, което е наречено „_благовестие на Царството“_. Съдейки от Великото поръчение и от 1 Коринтяни 15:24-28, Благовестието обхваща целия свят и говори за установяването на управлението на Христос над всички неща.
 
@@ -62,7 +62,7 @@
 Военният език на Павел във 2 Коринтяни 10:3-6 показва военен план в който „събаряме на крепости“, „пленяваме“, „събаряме помисли“ и „наказваме непокорството“. Неговата проповед в Атина завърши не с призив „дали някой ще приеме Исус в сърцето си“, но със:
 
 > „Бог ... сега заповядва (_παραγγέλλω_ – военен термин) на всички хора навсякъде да се покаят“.  
-> _~ Деяния 17:30_
+> ~ Деяния 17:30
 
 _Картината е ясна. В този свят, в историята, Божието царство започва от едно малко семе – от самия Исус Христос. То расте завоевателно през историята и Негово царство и мир се увеличават без край, докато не изпълни целия свят, точно както камъкът в Даниил 2, квасът и синапеното дърво в Матей 13\._
 
