Update Личното предназначение и Божието царство: Камъкът стана Планина.md

--- a/Личното предназначение и Божието царство: Камъкът стана Планина.md
+++ b/Личното предназначение и Божието царство: Камъкът стана Планина.md
@@ -10,7 +10,7 @@
 
 Благовестието е много по-голямо от спасението на отделните души – то обхваща целия свят.
 
-> 24 Тогава ще бъде краят, когато Той предаде царството на Бога и Отца, когато унищожи всяко началство и всяка власт, и сила, 25 защото Той трябва да царува, докато положи всички врагове под краката Си. 26 Последният враг, който ще бъде унищожен, е смъртта. 27 Защото Бог „е покорил всичко под краката Му“. Но когато казва, че всичко е покорено, ясно е, че се изключва Този, който Му е покорил всичко.  
+> <sup>24</sup> Тогава ще бъде краят, когато Той предаде царството на Бога и Отца, когато унищожи всяко началство и всяка власт, и сила, 25 защото Той трябва да царува, докато положи всички врагове под краката Си. 26 Последният враг, който ще бъде унищожен, е смъртта. 27 Защото Бог „е покорил всичко под краката Му“. Но когато казва, че всичко е покорено, ясно е, че се изключва Този, който Му е покорил всичко.  
 > 28 А когато всичко Му бъде покорено, тогава и Самият Син ще се покори на Този, който Му е покорил всичко, за да бъде Бог всичко във всичко.  
 > ~ 1 Коринтяни 15:24-28
 
