Update На гости в гетото или изкуството да бъдеш циганин.md

--- a/На гости в гетото или изкуството да бъдеш циганин.md
+++ b/На гости в гетото или изкуството да бъдеш циганин.md
@@ -47,31 +47,9 @@
 
 Излизаме навън. Някак не съм изненадана, че колата ни е непокътната. Пред нас тръгва друга кола, която да ни покаже пътя и да ни изведе от махалата. Този път минаваме по „околовръстното“ шосе. Отляво са къщите на лихварите – високи и хубави. Отдясно има дебела, сива, бетонна стена, висока около два метра и половина. Останалата част от града не се вижда. Стената закрива гледката през целия път. Търкам очи и не мога да повярвам. Все едно съм във филм за Хитлерова Германия. Липсва само звездата на Давид.
 
-<div class="field field-name-field-image field-type-image field-label-hidden">
+![Дете рецитира „Отче наш“. Всички деца шумно се включват](./img/uchilishcheto2.jpg)
 
-<div class="field-items">[![](http://zavet.eu/sites/default/files/styles/800px_width/public/uchilishcheto2.jpg?itok=1LfuZKIb)](http://zavet.eu/sites/default/files/styles/800px_width/public/uchilishcheto2.jpg?itok=1LfuZKIb)</div>
-
-</div>
-
-<div class="field field-name-field-attribution field-type-link-field field-label-inline clearfix">
-
-<div class="field-label">Източник на изображението: </div>
-
-<div class="field-items">[Авторката](http://zavet.eu/bg/people/lyubomira-vlcheva)</div>
-
-</div>
-
-<div class="field field-name-field-editorial field-type-text-long field-label-hidden">
-
-<div class="field-items">
-
-> Дете рецитира „Отче наш“. Всички деца шумно се включват.
-
-</div>
-
-</div>
-
-<span rel="schema:url" resource="/bg" class="rdf-meta element-hidden"></span>
+Източник на изображението: Авторката
 
 **Ново посещение**
 
@@ -90,3 +68,5 @@
 Две години по-късно пасторът на ромската църква ми беше на гости. На вратата се заговорихме с него и тогава му споделих за моят познат, пътуващият проповедник и неговата крилата фраза „искам да се науча да стана циганин“. За мое пълно изумление се оказа, че същият този човек е посещавал църквата в Сливен всяка година и е отсядал у пастора - тогава, _когато цялото семейство е живеело в една стая_.   
 
 Все още не мога да повярвам колко е малък светът!
+
+![Семинарията](./img/seminariyata2.jpg)
